--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hono/clerk-auth": "^2.0.0",
     "@hono/zod-validator": "^0.2.2",
     "@hookform/resolvers": "^3.6.0",
+    "@neondatabase/serverless": "^0.9.4",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
@@ -26,7 +27,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "drizzle-orm": "^0.31.2",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
     "hono": "^4.4.9",
     "lucide-react": "^0.397.0",
@@ -49,7 +51,7 @@
     "@types/pg": "^8.11.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "drizzle-kit": "^0.22.7",
+    "drizzle-kit": "^0.24.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
